  argument value is an int. (#8162)

Fixed
~~~~~

- `input.insert_mode.auto_load` sometimes not triggering due to a race
  condition.
- Worked around qutebrowser quitting when closing a KDE file dialog due to a Qt
  bug.
- Trying to use qutebrowser after it's been deleted/moved on disk (e.g. after a
  Python upgrade) should now not crash anymore.

[[v3.1.1]]
v3.1.1 (unreleased)
-------------------


[[v3.1.0]]
v3.1.0 (2023-12-08)
-------------------

Removed
~~~~~~~

- The darkmode settings `grayscale.all`, `grayscale.images` and
  `increase_text_contrast` got removed, following removals in Chromium.

Added
~~~~~

- New `smart-simple` value for `colors.webpage.darkmode.policy.images`, which on
  QtWebEngine 6.6+ uses a simpler classification algorithm to decide whether to
  invert images.
- New `content.javascript.legacy_touch_events` setting, with those now being
  disabled by default, following a Chromium change.

Changed
~~~~~~~

- Upgraded the bundled Qt version to 6.6.1, based on Chromium 112. Note
  this is only relevant for the macOS/Windows releases, on Linux those will be
  upgraded via your distribution packages.
- Upgraded the bundled Python version for macOS/Windows to 3.12
- The `colors.webpage.darkmode.threshold.text` setting got renamed to
  `colors.webpage.darkmode.threshold.foreground`, following a rename in
  Chromium.
- With Qt 6.6, the `content.canvas_reading` setting now works without a restart
  and supports URL patterns.

Fixed
~~~~~

- Some web pages jumping to the top when the statusbar is hidden or (with
  v3.0.x) when a prompt is hidden.
- Compatibility with PDF.js v4
- Added an elaborate workaround for a bug in QtWebEngine 6.6.0 causing crashes
  on Google Mail/Meet/Chat, and a bug in QtWebEngine 6.5.0/.1/.2 causing crashes
  there with dark mode.
- Made a rare crash in QtWebEngine when starting/retrying a download less likely
  to happen.
- Graphical glitches in Google sheets and PDF.js, again. Removed the version