@@ -184,7 +184,9 @@ def _find_webengine_resources() -> pathlib.Path:
         if (candidate / PAK_FILENAME).exists():
             return candidate
 
-    raise binparsing.ParseError("Couldn't find webengine resources dir")
+    candidates_str = "\n".join(f"    {p}" for p in candidates)
+    raise FileNotFoundError(
+        f"Couldn't find webengine resources dir, candidates:\n{candidates_str}")
 
 
 def copy_webengine_resources() -> Optional[pathlib.Path]:
